--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,8 @@ main {
 nav {
     text-decoration: none;
     position: relative;
-    width: fit-content;
     width: 100%;
+    justify-content: space-evenly;
 }
 
 #banner {
@@ -108,9 +108,14 @@ footer {
         justify-content: space-between;
         align-items: baseline;
     }
+    #cover-text {
+        width: 40%;
+        right: 20px;
+    }
 
     nav {
         position: relative;
+        width: 35%;
     }
 
     #navvi > li {
@@ -118,7 +123,7 @@ footer {
     }
 
     main {
-        margin-top: 46px;
+        margin-top: 43px;
     }
 
     
@@ -127,5 +132,9 @@ footer {
 @media screen and (min-width: 992px) {
     header {
         display: flex;
+    }
+
+    #cover-text {
+        width: 30%;
     }
 }
