--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     padding: 0;
 }
 
+/* Body - Love running code*/
 body {
     min-height: 100vh;
     display: flex;
@@ -61,7 +62,7 @@ main {
 
 #cover-text {
     position: absolute;
-    background-color: rgba(181, 227, 175, 0.5);
+    background-color: rgba(115, 133, 113, 0.5);
     border-radius: 50%;
     font-size: 100%;
     width: 80%;
@@ -70,6 +71,10 @@ main {
     padding: 20px;
     padding-bottom: 10px;
     text-align: center;
+}
+
+#cover-text h2, #cover-text h3 {
+    color: #fafafab8;
 }
 
 /* Menu - Love running code*/
@@ -123,22 +128,39 @@ nav {
     top: 20px;
     left: 20px;
     padding: 5px 10px;
-    color: #ffffff;
+    color: #fafafa;
     font-size: 120%;
     position: relative;
     width: 80%;
     background-color: rgba(115, 133, 113, 0.5);
-    border-radius: 20%;
+    border-radius: 25px;
 }
 
 #pin-drop h3 {
-    position: relative;
+    color: #fafafab8;
+    position: absolute;
     font-size: 100%;
     flex-basis: 100px;
+    bottom: 20px;
+    left: 10px;
+}
+
+#socials {
+    padding: 10px 0;
+    list-style-type: none;
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    width: 120%;
+}
+
+#socials i {
+    font-size: 150%;
+    color: #3a3a3a;
 }
 
 footer {
-    background-color: darkgreen;
+    background-color: #738571;
     display: flex;
 }
 
@@ -167,18 +189,18 @@ footer {
         margin-top: 43px;
     }
 
-    
 }
 
 @media screen and (min-width: 992px) {
     header {
         display: flex;
-        width: 200%;
+        font-size: 150%;
+        padding-top: 10px;
     }
 
     nav {
         position: relative;
-        width: 20%;
+        width: 30%;
     }
 
     #cover-text {
